nohup_logs/train4M_100ep.out
  File "scripts/train_giga.py", line 94
    msg += f' {k}: {v:.4f}'
                          ^
SyntaxError: invalid syntax
